--- a/src/App.css
+++ b/src/App.css
@@ -8,7 +8,6 @@ body{
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background: linear-gradient(to right, rgba(2, 49, 64, 0.164) 0%, rgb(179, 236, 255) 100%);
   font-size: 15px;
-  display: flex;
   flex-wrap: wrap;
   justify-content: center;
   height: 100%;
@@ -152,6 +151,7 @@ body{
 
 .headersmall{
   font-size: 10px;
+  padding-left: 1rem;
 }
 
 .headersmall a{
